# tapo-camera-mcp

./: .cursorrules  .cursorrules-tapo-camera-mcp.md  .dockerignore  .env.example  .gitignore  .mcpbignore  ASSESSMENT.md  BUG_BASH_2025-12-02.md  BUG_BASH_IMPROVEMENTS_2025-12-02.md  BUG_BASH_REPORT.md  BUG_BASH_SUMMARY_2025-12-02.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRASHPROOFING_IMPLEMENTATION.md  DOCKER_HARDWARE_ACCESS_FIXES.md  DOCS_UPDATED.md  DUAL_LINE_GRAPHS_COMPLETE.md  Dockerfile  EXE_FILES_ANALYSIS.md  FIXES_APPLIED.md  FIX_NETATMO_AUTH.md  HARDWARE_DETECTION_FIXED.md  HARDWARE_TESTING_README.md  HELP_PAGE_UPDATE.md  HUE_BRIDGE_STATUS.md  INTEGRATION_TEST_REPORT.md  LICENSE  LOG_MANAGEMENT_README.md  MONITORING_INTEGRATION.md  MONITORING_STACK_CONNECTION.md  PORTMANTEAU_TOOLS_PROVISION_COMPLETE.md  PORT_CONFLICT_HANDLING.md  README.md  README_DXT.md  RING_INTEGRATION_SUCCESS.md  SECURITY.md  SETUP_STATUS.md  STABILITY_SYSTEM_COMPLETE.md  WATCHFILES_README.md  (+68 more)
.cursor/: prompt_template.md  rules.md  settings.json  tasks.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-mcpb.yml  ci-comprehensive.yml  ci-improvements.md  ci.yml  release.yml
build_venv/: pyvenv.cfg
build_venv/Scripts/: activate  activate.bat
data/: camera_names.json  custom_ptz_presets.json
deploy/alertmanager/: alertmanager.yaml
deploy/gitlab/: docker-compose.yml
deploy/homeassistant/: README.md  docker-compose.yml
deploy/loki/: loki-config.yaml
deploy/monitoring/: docker-compose.monitoring.yml
deploy/myhomecontrol/: docker-compose.yml
deploy/prometheus/: prometheus.yaml
deploy/promtail/: promtail-config.yaml
deploy/secrets/: env.template
docs/: 2026-01-13-chinese-robot-vacuum-research.md  API_DOCUMENTATION.md  ASSESSMENT.md  AUTHENTICATION_IMPLEMENTATION_PLAN.md  AUTHENTICATION_STATUS.md  CAMERA_SETUP_GUIDE.md  DASHBOARD_STARTUP.md  DATABASE_ARCHITECTURE.md  DEVICE_ONBOARDING_SYSTEM.md  DOCKERIZATION_MYHOME_CONTROL.md  DOCKER_CLOUD_SERVICES.md  DOCKER_LOGGING.md  DOCKER_NETWORKING_HARDWARE_ACCESS.md  DOCUMENTATION_INDEX.md  DOMESTIC_GAS_SENSOR_INTEGRATION_PLAN.md  DXT_BUILDING_GUIDE.md  DXT_TO_MCPB_MIGRATION.md  EMERGENCY_DETECTION_AND_VOICE_INTEGRATION_PLAN.md  ENERGY_DASHBOARD_FIXES.md  FASTMCP_2.12_COMPLIANCE_GUIDE.md  GET_CAMERA_ACCOUNT.md  GITLAB_CE_SETUP.md  GLAMA_GOLD_STATUS_CHECKLIST.md  GLAMA_RESCAN_REQUEST.txt  GRAFANA_INTEGRATION_DETAILED.md  GRAFANA_INTEGRATION_OVERVIEW.md  GRAFANA_P115_ALERTING_SETUP.md  HOME_SECURITY_ENERGY_PLAN.md  HUMAN_HEALTH_MONITORING_PLAN.md  IMPLEMENTATION_PLAN_RING_NEST_GRAFANA.md  LIVING_ROOM_CAMERA_SETUP.md  LLMs.txt Standard.md  LOG_ANALYSIS.md  MCPB_IMPLEMENTATION.md  MCPB_QUICKSTART.md  MCP_CLIENT_ARCHITECTURE.md  MCP_HARDWARE_CONTROL.md  MCP_PRODUCTION_CHECKLIST.md  MCP_SERVER_CONFIGURATION.md  MCP_Server_Status_Authentication_Configuration.md  (+53 more)
docs/adn-notes/: Hardware-Initialization-Tool-Added-to-System-Management.md  SEP-1577-in-Tapo-Camera-MCP-Agentic-Security-Automation.md
docs/development/: BULLETPROOF_MCP_GUIDE.md  EMERGENCY_VOICE_ADN.md  GAS_SENSOR_ADN.md  HUMAN_HEALTH_MONITORING_ADN.md  MCP_CLIENT_AGNOSTIC_TESTING.md  MCP_TOOL_USAGE_ANTIPATTERNS.md  SMART_KITCHEN_ROBOTICS_ADN.md
docs/github/: COMPLETE_SETUP_GUIDE.md  DEPENDENCY_MANAGEMENT.md  README.md  RELEASE_CHECKLIST.md  SECURITY_HARDENING.md  TROUBLESHOOTING.md  WORKFLOWS.md
docs/mcp-technical/: ALERTING_PLAN.md  CAMERA_DASHBOARD_NOTES.md  CHAOS_TEST_PLAN.md  CI_OBSERVABILITY_CHECKS.md  CLAUDE_DESKTOP_DEBUGGING.md  CONFIG_MGMT_PLAN.md  CONTAINERIZATION_GUIDELINES.md  E2E_TESTS.md  EDGE_AGENT_DESIGN.md  GRAFANA_GAP_ANALYSIS.md  HANDOFF_CHECKLIST.md  HARDWARE_NETWORK_INVENTORY.md  LOGGING_DASHBOARD_NOTES.md  LOKI_PROMTAIL_PLAN.md  MONITORING_STACK_DEPLOYMENT.md  OBSERVABILITY_STACK_AUDIT.md  PROMETHEUS_FEDERATION_PLAN.md  README.md  RUNBOOKS.md  SECRETS_HARDENING_PLAN.md  SENSOR_API_OVERVIEW.md  SENSOR_DASHBOARD_NOTES.md  TROUBLESHOOTING_FASTMCP.md  USER_FLOW_IMPROVEMENTS.md
docs/mcpb-packaging/: MCPB_BUILDING_GUIDE.md
docs/misc/: tech-latin-quotes.md  tech-latin-rants.md  tech-latin-terms.md
docs/monitoring/: QUICKSTART.md  SETUP.md
examples/: README.md  config.yaml  test_cameras.py  test_dinov3.py
exports/: README.md  tapo-dashboard-troubleshooting-for-pdf.html  tapo-dashboard-troubleshooting-pandoc.html  tapo-dashboard-troubleshooting.html  tapo-dashboard-troubleshooting.md  tapo-dashboard-troubleshooting.txt
grafana/: tapo-camera-dashboard.json  tapo-ptz-dashboard.json
mcpb/: .mcpbignore  manifest.json
mcpb/prompts/: examples.json  system.md  user.md
scripts/: README.md  backup-repo.ps1  backup_repo.py  build-mcpb-package.ps1  check-repo-standards.ps1  check_camera_streams.py  check_tapo_setup.py  debug_ptz.py  debug_ptz_movement.py  debug_streaming.py  debug_tapo_auth.py  demo.py  detect_microscope.py  detect_otoscope.py  detect_usb_devices.py  diagnose_tapo_connection.py  discover_all_p115_plugs.py  discover_tapo_cameras.py  docker-build.ps1  docker-run.ps1  docker-update.ps1  extract_anime_vrobs.py  find_tapo_credentials.py  gitlab_backup.ps1  inspect_tapo_energy.py  inspect_tapo_methods.py  list_hue_scenes.py  manage-webapp.ps1  manage_logs.py  netatmo_oauth_helper.py  patch_ring_doorbell.py  provision-portmanteau-tools.ps1  run_hardware_tests.py  setup_old_devices.py  sync-sota.ps1  tapo_setup_checklist.md  test_admin_username.py  test_all_tapo_methods.py  test_both_cameras.py  test_both_p115_plugs.py  (+19 more)
src/tapo_camera_mcp/: __init__.py  __main__.py  analysis.py  cli.py  cli_v2.py  dual_server.py  exceptions.py  mcp_client.py  mcp_integration.py  metrics_service.py  models.py  patch_ring_doorbell.py  plugin.py  server.py  (+5 more)
tests/: README.md  add_test_camera.py  config.yaml  conftest.py  integration  test_audio_voice.py  test_image_analysis.py  test_llms_txt.py  test_nest_oauth.py  test_rest_only.py  test_ring_api.py  test_ring_client.py  test_security_integration.py  test_server.py  test_server_v2.py  test_utils.py  verify_imports.py
(+420 files in other folders)
